--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -3,7 +3,7 @@
 		
 		<!-- Top Nav -->
 		
-		<div class = "w3-bar w3-padding w3-white w3-card-4">
+		<div class = "w3-card w3-bar w3-padding w3-white ">
         <div style ="">
           <a  class = "w3-bar-item w3-hover-text-red" routerLink="/**" routerLinkActive="active" >Home</a>
           <a  class = "w3-bar-item w3-hover-text-red" routerLink="/templates" routerLinkActive="active">Templates</a>
@@ -15,7 +15,7 @@
       </div>
       
       <!-- Top Nav End -->
-      <div class="w3-sidebar w3-bar-block w3-collapse w3-card w3-animate-left" style="width:300px;" id="mySidebar">
+      <div class="w3-sidebar w3-bar-block w3-collapse  w3-animate-left" style="width:300px;" id="mySidebar">
         <button class="w3-bar-item w3-button w3-large w3-hide-large" onclick="w3_close()">Close &times;</button>
         <a href="#" onclick = "javascript: openAccount(); return false;" class="w3-hover-light-grey w3-bar-item w3-button selected" id = "account-link">Account</a>
         <a href="#" onclick = "javascript: openSavedResumes(); return false;"  class="w3-hover-light-grey w3-bar-item w3-button" id = "saved-resumes-link">Saved Resumes</a>
@@ -30,7 +30,7 @@
           
         </div>
         
-        <div class = "w3-card-4 w3-round" style = "margin-top: 10px;">
+        <div class = " w3-round" style = "margin-top: 10px;">
           <!-- Account -->
           <div class = "w3-container" style = "height: 520px;" id = "account">
             
