--- a/src/app/templates/templates.component.html
+++ b/src/app/templates/templates.component.html
@@ -79,7 +79,7 @@
             <img src = "../../assets/images/intern1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a  href="../../assets/images/intern1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active"style = "width: 100%;">Use Template</a>
             </div>
           </div>
           
@@ -94,7 +94,7 @@
             <img src = "../../assets/images/intern2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a  href="../../assets/images/intern2.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active"style = "width: 100%;">Use Template</a>
             </div>
           </div>
           
@@ -109,7 +109,7 @@
             <img src = "../../assets/images/intern3.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
             <div class = "w3-display-middle w3-center hover-display">
               <a  href="../../assets/images/intern3.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+              <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active" style = "width: 100%;">Use Template</a>
             </div>
           </div>
           
@@ -131,7 +131,7 @@
           <img src = "../../assets/images/Pro_temp1.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/Pro_temp1.png"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form1" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
@@ -146,7 +146,7 @@
           <img src = "../../assets/images/pro_temp2.png" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/pro_temp2.png"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form1" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
@@ -161,7 +161,7 @@
           <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/resume.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form1" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
@@ -181,7 +181,7 @@
           <img src =  "../../assets/images/fresher1.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/fresher1.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
@@ -196,7 +196,7 @@
           <img src = "../../assets/images/fresher 2.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/fresher 2.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
@@ -211,7 +211,7 @@
           <img src = "../../assets/images/resume.jpg" class = "w3-img " style = "height: 90%; margin-top: 5%; width: 100%; object-fit: contain;">
           <div class = "w3-display-middle w3-center hover-display">
             <a  href="../../assets/images/resume.jpg"class = "w3-btn w3-blue w3-round" target ="_blank" style = "width: 100%;">View</a>
-            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" style = "width: 100%;">Use Template</a>
+            <a href = "#" class = "w3-btn w3-red w3-margin-top w3-round" routerLink="/form2" routerLinkActive="active" style = "width: 100%;">Use Template</a>
           </div>
         </div>
         
