--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -99,16 +99,12 @@
 								<input name="major[]"type = "text" placeholder="e.g; Computer Science "style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						</div>
 						<div class="w3-half">
-								<p>Start Date</p>
-								<input name="startdate[]" type = "text" placeholder="e.g; MM/YY " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+								<p>Academic Session</p>
+								<input name="acedemicsession[]" type = "text" placeholder="e.g; July 2015 - June 2019 " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						</div>
-						<div class="w3-half">
-								<p>End Date</p>
-								<input name= "enddate[]"type = "text" placeholder="e.g; MM/YY " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
-						</div>
-						<div >
-								<p>GPA</p>
-								<input name="gpa[]"type = "text" placeholder="e.g; 8.5" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+						<div class="w3-half" >
+							<p>Score</p>
+							<input name="score[]"type = "text" placeholder="e.g; 8.5 or 85%" style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
 						</div>
 					
 						<div class="w3-margin-top">
