--- a/src/app/form2/form2.component.html
+++ b/src/app/form2/form2.component.html
@@ -100,7 +100,7 @@
         </div>
         <div class="w3-half">
             <p>Academic Session</p>
-            <input name="acedemicsession[]" type = "text" placeholder="e.g;2015-2019 " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
+            <input name="acedemicsession[]" type = "text" placeholder="e.g;July 2015- June 2019 " style = "width: 500px; border: 0px solid black;" class = "w3-container w3-light-grey w3-padding reset">
         </div>
         <div class="w3-half" >
             <p>Score</p>
