--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
         <div class = "w3-row-padding" style = "width: 400px;">
   
           <div class = "w3-col" style = "width: 45%;">
-            <a class = "w3-btn w3-blue w3-padding w3-round w3-animate-right" style = "animation-delay: 0.4s; width: 160px;" href="#login">Create Resume</a>
+            <a class = "w3-btn w3-blue w3-padding w3-round w3-animate-right" style = "animation-delay: 0.4s; width: 160px;" routerLink="/login" routerLinkActive="active">Create Resume</a>
           </div>
           
           <div class = "w3-col" style = "width: 45%">
@@ -25,143 +25,4 @@
     </div>
     <!--header close-->
   
-    <!-- Content -->
-    <div id = "login" class = "w3-container w3-card-4 w3-white w3-content w3-round" style = "padding: 0px; margin-bottom: 50px; padding-bottom: 40px; padding-top: 40px; margin-top: -50px; position: relative;">
-      
-      <div class = "w3-container" style = "margin-top: 0px; margin-bottom: 30px;">
-        <div class = "w3-padding w3-center">
-          <!--<h2 style = "padding-bottom: 16px; background: linear-gradient(blue, blue) bottom/20% 3px no-repeat;">Login or Sign up to use your favourite templates.</h2>-->
-          <h2>Login or Sign up to use your favourite templates.</h2>
-        </div>
-      </div>
     
-      <div class = "w3-half w3-padding">
-        <div style = "top: 50%;">
-          <img src="../assets/images/resume.png" class = "w3-image">
-        </div>
-      </div>
-      <div class = "w3-half w3-padding">
-        <div class = "w3-container"  style = "margin-top: 5%;" id = "login-div">
-          <form method="GET">
-            <div style = "width: 70%; margin-left: auto; margin-right: auto;" class = "w3-white w3-round w3-padding-large w3-card-4 hidden ">
-              <p style = "text-align: left;">Username </p>
-              <input placeholder = "Username" type = "text" class = "w3-light-grey w3-padding w3-round w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required>
-              <p style = "text-align: left;">Password</p>
-              <input placeholder = "Password" type = "password" class = "w3-padding w3-light-grey w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required> <br>
-              <button class = "w3-btn w3-blue w3-round w3-margin-top" style = "width: 100%;" type = "submit"><a>Login</a></button>
-              <a class = "w3-right w3-small w3-margin-top w3-hover-text-red" href = "#" onclick = "javascript: openForgotPassword(); return false;">Forgot password?</a>
-              <p>Or <a href = "#" onclick = "javascript: openSignUp(); return false;" class = "w3-text-blue">Sign Up</a> using </p>
-            
-              <div class = "w3-center w3-margin-bottom w3-margin-top">
-                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%; margin-right:16px"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
-                <span class = "w3-padding w3-round w3-btn w3-border w3-indigo" style = "width: 45%;"><i class = "fa fa-facebook w3-medium w3-margin-right "></i><a>Facebook</a></span>
-              </div>
-            </div>
-          </form>
-        </div>
-        
-        <div class = "w3-container" style = "display: none; margin-top: 5%;" id = "signup-div">
-          <form action = "#">
-            <div style = "width: 70%; margin-left: auto; margin-right: auto;" class = "w3-white w3-round w3-padding-large w3-card-4 hidden">
-              <p style = "text-align: left;">Username</p>
-              <input placeholder = "Username" type = "text" class = "w3-light-grey w3-padding w3-round w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required>
-              <p style = "text-align: left;">Email</p>
-              <input  placeholder = "Email" type = "email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class = "w3-light-grey w3-padding w3-round w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required>
-              <p style = "text-align: left;">Password</p>
-              <input placeholder = "Password" type = "password" id="password" class = "w3-padding w3-light-grey w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required> <br>
-              <p style = "text-align: left;">Confirm Password</p>
-              <input placeholder = "Password" type = "password" id="confirm_password" onkeyup='check();'class = "w3-padding w3-light-grey w3-text-grey w3-small" style = "border: 0px solid black; text-align: left; width: 100%;" required> <br>
-              <span id='message'></span>
-              <button class = "w3-btn w3-blue w3-round w3-margin-top" style = "width: 100%;" type = "submit"><a>Sign Up</a></button>
-            
-              <div class = "w3-center w3-margin-bottom w3-margin-top">
-                <span class = "w3-padding w3-round w3-btn w3-border w3-red" style = "width: 45%; margin-right:16px"><i class = "fa fa-google w3-medium w3-margin-right"></i><a>Google</a></span>
-                <span class = "w3-padding w3-round w3-btn w3-border w3-indigo" style = "width: 45%;"><i class = "fa fa-facebook w3-medium w3-margin-right"></i><a>Facebook</a></span>
-              </div>
-              <a href = "#" class = "w3-hover-text-blue w3-round" style = "width: 100%;" onclick="javascript: openLogin(); return false;">Go back to login page</a>
-            </div>
-          </form>
-        </div>
-        
-        <div class = "w3-container w3-white" style = "display: none; margin-top: 5%;" id = "forgot-password-div">
-          <form action = "/forgot_password_page.php">
-            <div style = "width: 70%; margin-left: auto; margin-right: auto;" class = "w3-white w3-round w3-padding-large w3-card-4 hidden">
-              <a href = "javascript: return false;" style = "cursor: default; text-align: left;">Enter your email</a>
-              <input placeholder = "Email" type = "email" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" class = "w3-light-grey w3-padding w3-round w3-text-grey w3-small w3-margin-top" style = "border: 0px solid black; text-align: left; width: 100%;" required>
-              <button type = "submit" class = "w3-blue w3-btn w3-margin-top w3-margin-bottom w3-round"><a>Submit</a></button><br>
-              <a href = "#" class = "w3-hover-text-blue w3-round" style = "width: 100%;" onclick="javascript: openLogin(); return false;">Go back to login page</a>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-      <!-- Content End -->
-  
-    <div class = "w3-container w3-text-light-grey" style = "padding-bottom: 50px; background-color: #212F3C;">
-        <div class = "w3-content" style = "margin-top: 30px;">
-          <div class = "w3-quarter">
-            <ul style = "list-style-type: none;">
-              <li class = "w3-padding">
-                <a href = "#" class = "w3-hover-text-red">
-                  <i class = "fa fa-home w3-large w3-margin-right"></i>Home
-                </a>
-              </li>
-              <li class = "w3-padding">
-                  <a href = "#" class = "w3-hover-text-red">
-                      <i class = "fa fa-angellist w3-large w3-margin-right"></i>Best Picks
-                  </a>
-              </li>
-            </ul>
-          </div>
-          <div class = "w3-quarter">
-              <ul style = "list-style-type: none;">
-                <li class = "w3-padding">
-                  <a href = "#" class = "w3-hover-text-red">
-                    <i class = "fa fa-home w3-large w3-margin-right"></i>Contact Us
-                  </a>
-                </li>
-                <li class = "w3-padding">
-                    <a href = "#" class = "w3-hover-text-red">
-                        <i class = "fa fa-angellist w3-large w3-margin-right"></i>Premium
-                    </a>
-                </li>
-              </ul>
-          </div>
-          <div class = "w3-quarter">
-              <ul style = "list-style-type: none;">
-                <li class = "w3-padding">
-                  <a href = "#" class = "w3-hover-text-red">
-                    <i class = "fa fa-home w3-large w3-margin-right"></i>Home
-                  </a>
-                </li>
-                <li class = "w3-padding">
-                    <a href = "#" class = "w3-hover-text-red">
-                        <i class = "fa fa-angellist w3-large w3-margin-right"></i>Best Picks
-                    </a>
-                </li>
-              </ul>
-          </div>
-          <div class = "w3-quarter">
-              <ul style = "list-style-type: none;">
-                <li class = "w3-padding">
-                  <a href = "#" class = "w3-hover-text-red">
-                    <i class = "fa fa-home w3-large w3-margin-right"></i>Home
-                  </a>
-                </li>
-                <li class = "w3-padding">
-                    <a href = "#" class = "w3-hover-text-red">
-                        <i class = "fa fa-angellist w3-large w3-margin-right"></i>Best Picks
-                    </a>
-                </li>
-              </ul>
-          </div>
-        </div>		
-      </div>
-      <div class = "w3-container w3-padding w3-text-white w3-center" style = "background-color: #17202A;">
-      <div class = "w3-content"><p>Copyright &copy 2019. All Rights Reserved.</p></div>
-      </div>
-      <!-- Footer End -->
-  
-    
-    
-  </div>
