--- a/src/app/form1/form1.component.html
+++ b/src/app/form1/form1.component.html
@@ -30,7 +30,7 @@
 		
 		<!-- Content -->
 		
-		<form action ="#"class="w3-main w3-container" style="margin-left:185px;">
+		<div class="w3-main w3-container" style="margin-left:185px;">
 			<div class = "w3-white">
 				<button class="w3-button w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</button>
 				
@@ -261,6 +261,6 @@
 		
 
 			
-		</form>
+		</div>
   
   </div>
